--- a/style/index.css
+++ b/style/index.css
@@ -3,82 +3,171 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
+
+
 /* Add CSS styling here */
 
 
-
 /* General styles */
-* {
-    border: 1px solid black;
 
+.top {
+    display: inline-flex;
+    justify-content: space-between;
+    align-content: center;
+    text-align: end;
 }
- html {
-     font-size: 62.5%;
-     background-image: url('wood.png.webp');
-     color: antiquewhite;
-    }
 
+html {
+    font-size: 62.5%;
+    background-image: url('wood.png.webp');
+    color: antiquewhite;
+}
 
 body {
-    font-size: 1.6rem;
+    font-size: 5rem;
     font-family: 'Lora', serif;
     line-height: 1.5;
 }
 
-
 h1 {
-    margin-top: 2%;
     font-family: 'Staatliches', cursive;
-    font-size: 5rem;
+    font-size: 9rem;
     margin-right: 50%;
     display: flex;
     justify-content: start;
-    
 }
-
 
 a {
     text-decoration: none;
@@ -86,25 +175,18 @@ a {
     margin-bottom: 1%;
     color: antiquewhite;
     font-family: 'Lora', serif;
-    font-size: 3rem;
-    
+    font-size: 5rem;
 }
 
-.top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-}
 
+/* More Styles */
 
 nav {
-    display: flex;
+    display: inline-flex;
     justify-content: end;
     font-size: 2rem;
-    
+    margin-left: 45%;
 }
-
 
 nav a {
     padding: 3%;
@@ -112,25 +194,39 @@ nav a {
     color: white;
 }
 
-
 .mainBlock {
-    /* display: flex;
-    justify-content: center;
-    flex-wrap: wrap; */
     width: 100%;
     text-align: center;
-
 }
 
+section img {
+    width: 500px;
+    height: auto;
+}
 
 .topBox {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    text-align: center;
 }
 
+.bottomBox {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-left: 5%;
+}
 
-.resizer {
-    height: 10%;
-    width: 20%;
+.bottomBox img {
+    height: 600px;
+}
+
+.namePic img {
+    width: 100%;
+}
+
+footer {
+    text-align: center;
 }
